src/main/metadata/objects/FS_Contract_Relations__c.object
<CustomObject>
    <description>This is a junction object between FS Contract and Guarantor &amp; Borrower(Accounts).</description>
    <fields>
        <fullName>Composite_Contract_relation_Identifier__c</fullName>
        <formula>FS_Customer__r.BPID__c+"-"+ FS_Contract__r.Contract_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Composite Contract relation Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Contract__c</fullName>
        <label>FS Contract</label>
        <referenceTo>FS_Contract__c</referenceTo>
        <relationshipLabel>FS Contract Relations</relationshipLabel>
        <relationshipName>FS_Contract_Relations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FS_Customer_Copy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FS Customer Copy</label>
        <referenceTo>Account_Link__c</referenceTo>
        <relationshipLabel>FS Contract Relations</relationshipLabel>
        <relationshipName>FS_Contract_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FS_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FS Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FS Contract Relations</relationshipLabel>
        <relationshipName>FS_Contract_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relation_Type__c</fullName>
        <label>Relation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Guarantor</fullName>
                </value>
                <value>
                    <fullName>Co-Borrower</fullName>
                </value>
                <value>
                    <fullName>Co-Guarantor</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>FS Contract Relations</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>FS Contract Relations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FS Contract Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>